[package]
name = "concierge"
version = "0.2.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
http = "1"

[dev-dependencies]
